--- a/pizza-service/pom.xml
+++ b/pizza-service/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>com.redis.om</groupId>
       <artifactId>redis-om-spring</artifactId>
-      <version>0.3.0-SNAPSHOT</version>
+      <version>0.5.0-SNAPSHOT</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
     <dependency>
@@ -49,17 +49,11 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
       <version>2.7.0</version>
     </dependency>
-
-    <!--    <dependency>-->
-<!--      <groupId>io.springfox</groupId>-->
-<!--      <artifactId>springfox-boot-starter</artifactId>-->
-<!--      <version>3.0.0</version>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>io.springfox</groupId>-->
-<!--      <artifactId>springfox-swagger-ui</artifactId>-->
-<!--      <version>3.0.0</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.6.8</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -78,6 +72,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -115,10 +110,14 @@
         <enabled>false</enabled>
       </releases>
     </repository>
-      <repository>
-        <id>snapshots-repo</id>
-        <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
-      </repository>
+    <repository>
+      <id>snapshots-repo</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+      <id>snapshots-repo</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
     <repository>
       <id>spring-milestones</id>
       <name>Spring Milestones</name>
