--- a/shipment-service/src/main/resources/application.yml
+++ b/shipment-service/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8082
+  port: 8088
+spring:
+  application:
+    name: SHIPMENT-SERVICE
 eureka:
   client:
-    fetch-registry: true
     register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
-spring:
-  application:
-    name: PIZZA_SERVICE
