--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -31,8 +31,16 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-gateway</artifactId>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.axonframework/axon -->
     <dependency>
@@ -47,8 +55,11 @@
       <artifactId>guava</artifactId>
       <version>31.1-jre</version>
     </dependency>
-
-
+    <dependency>
+      <groupId>com.example</groupId>
+      <artifactId>main-register-service</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -70,6 +81,12 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.axonframework</groupId>
+      <artifactId>axon-messaging</artifactId>
+      <version>4.5.9</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
   <dependencyManagement>
