--- a/shipment-service/pom.xml
+++ b/shipment-service/pom.xml
@@ -8,35 +8,19 @@
     <version>2.7.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-  <groupId>com.pizzashop</groupId>
-  <artifactId>user-service</artifactId>
+  <groupId>com.example</groupId>
+  <artifactId>shipment-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>user-service</name>
-  <description>user-service</description>
+  <name>shipment-service</name>
+  <description>shipment-service</description>
   <properties>
     <java.version>11</java.version>
-    <spring-cloud.version>2021.0.3</spring-cloud.version>
+    <spring-cloud.version>2021.0.3-SNAPSHOT</spring-cloud.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-oauth2-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -47,26 +31,28 @@
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-      <version>1.3.1.Final</version>
+      <groupId>com.pizzashop</groupId>
+      <artifactId>order-service</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct-processor</artifactId>
-      <version>1.4.2.Final</version>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.axonframework/axon -->
+    <dependency>
+      <groupId>org.axonframework</groupId>
+      <artifactId>axon-spring-boot-starter</artifactId>
+      <version>4.5.9</version>
     </dependency>
     <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt</artifactId>
-      <version>0.9.1</version>
+      <groupId>com.redis.om</groupId>
+      <artifactId>redis-om-spring</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <scope>runtime</scope>
-    </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -78,9 +64,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-test</artifactId>
-      <scope>test</scope>
+      <groupId>org.axonframework</groupId>
+      <artifactId>axon-spring</artifactId>
+      <version>4.5.9</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
   <dependencyManagement>
@@ -111,5 +98,23 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+    <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/snapshot</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+    <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
 </project>
