--- a/gateway-user-auth-service/src/main/resources/application.yml
+++ b/gateway-user-auth-service/src/main/resources/application.yml
@@ -3,8 +3,20 @@ server:
 
 management:
   endpoint.gateway.enabled: true
-  endpoints.web.exposure.include: gateway
-
+  endpoints:
+    web:
+      base-path: /actuator
+      cors:
+        allowed-origins: true
+      exposure:
+        include: "*"
+    jmx:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+      enabled: true
 spring:
   application.name: gateway-user-auth-service
   cloud:
@@ -15,14 +27,43 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/users/signIn,/users/signUp
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: user-service
+                fallbackuri: forward:/fallBack/userService
         - id: user-service
           uri: lb://user-service
           predicates:
             Path=/users/**
           filters:
             - AuthFilter
+            - name: CircuitBreaker
+              args:
+                name: user-service
+                fallbackuri: forward:fallback/userService
+
+      filter:
+        hystrix:
+          enabled: true
+    circuitbreaker:
+      hystrix:
+        enabled: true
+
+
+  main:
+    allow-circular-references: true
+    web-application-type: reactive
+    allow-bean-definition-overriding: true
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    hostname: localhost
+hystrix:
+  dashboard:
+    proxy-stream-allow-list: "*"
